<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>MobileTestAutomationFramework_Cust</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>MobileTestAutomationFramework_Cust</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.appium</groupId>
      <artifactId>java-client</artifactId>
      <version>9.2.3</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>4.22.0</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-api</artifactId>
      <version>4.22.0</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-remote-driver</artifactId>
      <version>4.22.0</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>io.github.bonigarcia</groupId>-->
<!--      <artifactId>webdrivermanager</artifactId>-->
<!--      <version>5.0.3</version>-->
<!--    </dependency>-->
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20</version>
        <executions>
          <execution>
            <!--  <id>acceptance-test</id>
             <phase>integration-test</phase> -->
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <!--<outputEncoding>UTF-8</outputEncoding>-->
              <parallel>classes</parallel>
              <perCoreThreadCount>true</perCoreThreadCount>
              <threadCountClasses>10</threadCountClasses>
              <argLine>-Xmx1024m</argLine>
              <argLine>-XX:MaxPermSize=256m</argLine>
              <includes>
                <exclude>**/StartUpAppium*.java</exclude>
              </includes>
            </configuration>
          </execution>
        </executions>

      </plugin>
    </plugins>
  </build>

</project>
